[TASK]    Remove usage of deprecated constant TYPO3_MODE, see https://docs.typo3.org/c/typo3/cms-core/master/en-us/Changelog/11.0/Deprecation-92947-DeprecateTYPO3_MODEAndTYPO3_REQUESTTYPEConstants.html
[BUGFIX]  Fix the check which action is currently set in the backend module, fixes error: Could not ultimately dispatch the request after 101 iterations

Version 4.0.1, October 2021
[TASK]    Use new ke_search_premium 4 namespace "tpwd"

Version 4.0.0, September 2021
[!!!]     This version changes the namespace for ke_search to "twpd". If you extend or use classes of ke_search, please make sure to use the new namespace in your code.
[TASK]    Move repository and issue tracker to https://github.com/tpwd/ke_search
[TASK]    Switch namespace to tpwd
[TASK]    Remove hidden records (pages, news, tt_news, tt_address) from the index when indexer is running in incremental mode

Version 3.9.0, July 2021
[TASK]    Update label for automated_tagging, Thanks to OnyxPisces, https://github.com/teaminmedias-pluswerk/ke_search/issues/421
[TASK]    Add documentation on how to show images for custom indexers
[TASK]    Update backend module to use TYPO3 styles. Thanks to Mike Street. https://github.com/teaminmedias-pluswerk/ke_search/pull/427
[TASK]    Make pluginbase accessible in searchphrase hooks. Thanks to Philip Hartmann. https://github.com/teaminmedias-pluswerk/ke_search/pull/432
[BUGFIX]  Add missing closing p tag. Thanks to ste101. https://github.com/teaminmedias-pluswerk/ke_search/pull/431
[TASK]    Allow filters to be rendered in result list. Thanks to Mike Street. https://github.com/teaminmedias-pluswerk/ke_search/pull/428

Version 3.8.1, June 2021
[TASK]    Return JSON if in headless mode (ke_search_premium feature)

Version 3.8.0, May 2021
[!!!]     Scheduler task "Indexing process for ke_search" is deprecated now. Please use "Execute console commands" -> "ke_search:indexing" instead.
[FEATURE] Add incremental indexing feature